--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "DEBUG=secmodproject:* nodemon ./bin/www",
+    "dev": "DEBUG=secmodproject:* nodemon ./bin/www -e js,pug",
     "dev-windows": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "hbs": "^4.0.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
+    "passport": "^0.4.0",
+    "passport-local-mongoose": "^5.0.1",
+    "pug": "^2.0.4",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
