--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
+    "password-validator": "^5.0.2",
     "pug": "^2.0.4",
     "serve-favicon": "^2.5.0"
   },
